<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lytContenedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView android:id="@+id/lblNombre"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView android:id="@+id/lblApellido"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subname" />

    <EditText android:id="@+id/txtSubName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView android:id="@+id/lblUser"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText android:id="@+id/txtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView android:id="@+id/lblPassw"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText android:id="@+id/txtPassw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <TextView android:id="@+id/lblNTarjeta"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ntarget" />

    <EditText android:id="@+id/txtNTarjeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <RadioGroup
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioOpcionA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ntypetargetA" />

        <RadioButton
            android:id="@+id/radioOpcionB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ntypetargetB" />

    </RadioGroup>

    <Switch
        android:id="@+id/switNotifi"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notific" />

    <CheckBox
        android:id="@+id/checkBoxTerminos"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms" />

    <Button
        android:id="@+id/btnAceptar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/aceptar" />

</LinearLayout>